@@ -308,10 +308,10 @@ CONFIG_NSH_MMCSDSLOTNO=0
 #
 # Board-Specific Options
 #
-CONFIG_SAMA5_MT47H128M16RT=y
-# CONFIG_SAMA5_MT47H64M16HR is not set
-CONFIG_SAMA5_AT25_AUTOMOUNT=y
-CONFIG_SAMA5_AT25_FTL=y
+CONFIG_SAMA5D3xEK_MT47H128M16RT=y
+# CONFIG_SAMA5D3xEK_MT47H64M16HR is not set
+CONFIG_SAMA5D3xEK_AT25_AUTOMOUNT=y
+CONFIG_SAMA5D3xEK_AT25_FTL=y
 
 #
 # RTOS Features
