@@ -268,8 +268,8 @@ CONFIG_ARCH_HAVE_IRQBUTTONS=y
 #
 # Board-Specific Options
 #
-CONFIG_SAMA5_NOR_MAIN=y
-# CONFIG_SAMA5_NOR_START is not set
+CONFIG_SAMA5D3xEK_NOR_MAIN=y
+# CONFIG_SAMA5D3xEK_NOR_START is not set
 
 #
 # RTOS Features
