@@ -343,9 +343,9 @@ CONFIG_NSH_MMCSDMINOR=0
 #
 # Board-Specific Options
 #
-CONFIG_SAMA5_MT47H128M16RT=y
-# CONFIG_SAMA5_MT47H64M16HR is not set
-CONFIG_SAMA5_TSD_DEVMINOR=0
+CONFIG_SAMA5D3xEK_MT47H128M16RT=y
+# CONFIG_SAMA5D3xEK_MT47H64M16HR is not set
+CONFIG_SAMA5D3xEK_TSD_DEVMINOR=0
 
 #
 # RTOS Features
