@@ -318,9 +318,9 @@ CONFIG_ARCH_HAVE_IRQBUTTONS=y
 #
 # Board-Specific Options
 #
-CONFIG_SAMA5_MT47H128M16RT=y
-# CONFIG_SAMA5_MT47H64M16HR is not set
-CONFIG_SAMA5_OV2640_DEMO=y
+CONFIG_SAMA5D3xEK_MT47H128M16RT=y
+# CONFIG_SAMA5D3xEK_MT47H64M16HR is not set
+CONFIG_SAMA5D3xEK_OV2640_DEMO=y
 
 #
 # RTOS Features
