@@ -7073,3 +7073,7 @@
 	  the functions in sam_pmc.c) to determine the MCK, PCK, etc.  We assume
 	  that the MCK input clock is well known main crystal oscillator
 	  frequency (2014-3-29).
+	* configs/sama5d3x-ek:  Change all configuration names to board-
+	  specific names so that this are no name collisions with other
+	  boards that have similar configuration variables (2013-3-30).
+
